--- a/backend/requirements-ml.txt
+++ b/backend/requirements-ml.txt
@@ -1,26 +1,26 @@
 # AI and ML dependencies
-openai==1.3.7
-tiktoken==0.5.2
+openai>=1.3.0,<2.0.0
+tiktoken>=0.5.0,<1.0.0
 
 # Data processing
-pandas==2.1.3
-numpy==1.25.2
+pandas>=2.0.0,<3.0.0
+numpy>=1.24.0,<2.0.0
 
 # Code analysis
-ast-decompiler==0.7.0
-gitpython==3.1.40
-tree-sitter==0.20.4
-tree-sitter-python==0.20.4
-tree-sitter-javascript==0.20.4
-tree-sitter-typescript==0.20.4
-tree-sitter-java==0.20.2
+ast-decompiler>=0.7.0
+gitpython>=3.1.0,<4.0.0
+tree-sitter>=0.20.0,<1.0.0
+tree-sitter-python>=0.23.0
+tree-sitter-javascript>=0.20.0
+tree-sitter-typescript>=0.20.0
+tree-sitter-java>=0.20.0
 
 # Graph analysis
-networkx==3.2.1
-matplotlib==3.8.2
-seaborn==0.13.0
+networkx>=3.0.0,<4.0.0
+matplotlib>=3.7.0,<4.0.0
+seaborn>=0.12.0,<1.0.0
 
-# ML frameworks
-scikit-learn==1.3.2
-torch==2.1.1
-torch-geometric==2.4.0
+# ML frameworks (optional for basic functionality)
+scikit-learn>=1.3.0,<2.0.0
+# torch==2.1.1  # Commented out for now due to size
+# torch-geometric==2.4.0  # Commented out for now due to dependencies
